<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appName"
            android:textSize="64sp" android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/login_activity_email_hint"
            android:ems="10"
            android:id="@+id/loginEmailEditText"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/appName"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp" android:layout_marginEnd="30dp" android:layout_marginStart="30dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:inputType="textPassword"
            android:hint="@string/login_activity_password_hint"
            android:ems="10"
            android:id="@+id/loginPasswordEditText"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText"
            app:layout_constraintEnd_toEndOf="@+id/loginEmailEditText"
            app:layout_constraintStart_toStartOf="@+id/loginEmailEditText"/>
    <Button
            android:text="@string/login_activity_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText"
            app:layout_constraintEnd_toEndOf="@+id/loginPasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordEditText"/>
    <TextView
            android:id="@+id/loginCreateAnAccountTextView"
            android:text="@string/login_activity_create_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/registration_activity_already_have_an_account"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/loginButton" app:layout_constraintStart_toStartOf="@+id/loginButton"/>
</android.support.constraint.ConstraintLayout>