<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appName" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="64sp" android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/registration_activity_username_hint"
            android:ems="10"
            android:id="@+id/registrationUsernameEditText" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/appName" android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/registration_activity_email_hint"
            android:ems="10"
            android:id="@+id/registrationEmailEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationUsernameEditText"
            app:layout_constraintStart_toStartOf="@+id/registrationUsernameEditText"
            app:layout_constraintEnd_toEndOf="@+id/registrationUsernameEditText"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/registration_activity_password_hint"
            android:ems="10"
            android:id="@+id/registrationPasswordEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationEmailEditText"
            app:layout_constraintStart_toStartOf="@+id/registrationEmailEditText"
            app:layout_constraintEnd_toEndOf="@+id/registrationEmailEditText"/>
    <Button
            android:text="@string/registration_activity_register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registrationButton" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationPasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/registrationPasswordEditText"
            app:layout_constraintEnd_toEndOf="@+id/registrationPasswordEditText"/>
    <TextView
            android:id="@+id/registrationAlreadyHaveAnAccountTextView"
            android:text="@string/registration_activity_already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/registrationButton" app:layout_constraintStart_toStartOf="@+id/registrationButton"
            app:layout_constraintEnd_toEndOf="@+id/registrationButton"
            android:hint="@string/registration_activity_already_have_an_account"/>
</androidx.constraintlayout.widget.ConstraintLayout>