<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout">

    <Button
            android:text="@string/welcome_page_profile_fragment_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.352"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="232dp"
            android:layout_height="42dp"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/addressEditText"
            android:hint="@string/welcome_page_profile_fragment_address"
            android:nextFocusDown="@id/stateEditText"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomePageProfileHeaderTextView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/cityEditText"
            android:hint="@string/welcome_page_profile_fragment_city"
            android:nextFocusDown="@id/zipCodeEditText"
            app:layout_constraintStart_toStartOf="@+id/addressEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/addressEditText"
            app:layout_constraintEnd_toEndOf="@+id/addressEditText"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/zipCodeEditText"
            android:hint="@string/welcome_page_profile_fragment_zip_code"
            app:layout_constraintStart_toEndOf="@+id/cityEditText"
            app:layout_constraintBottom_toBottomOf="@+id/cityEditText"
            app:layout_constraintTop_toTopOf="@+id/cityEditText"
            app:layout_constraintEnd_toEndOf="@+id/stateEditText" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/phoneNumberEditText"
            android:hint="@string/welcome_page_profile_fragment_phone_number"
            app:layout_constraintEnd_toEndOf="@+id/zipCodeEditText"
            app:layout_constraintStart_toStartOf="@+id/cityEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cityEditText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomePageProfileHeaderTextView"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="48sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:textAllCaps="false" android:text="@string/welcome_page_profile_fragment_header"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/stateEditText"
            android:hint="@string/welcome_page_profile_fragment_state"
            android:nextFocusDown="@id/cityEditText"
            app:layout_constraintStart_toEndOf="@+id/addressEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addressEditText"
            app:layout_constraintBottom_toBottomOf="@+id/addressEditText" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>