<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/welcome_page_fragment_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setupAccountWelcomeTextView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textColor="@color/colorPrimary"/>
    <TextView
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/welcome_page_fragment_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setupAccountGetStartedTextView"
            app:layout_constraintStart_toStartOf="@+id/setupAccountWelcomeTextView"
            app:layout_constraintEnd_toEndOf="@+id/setupAccountWelcomeTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/setupAccountWelcomeTextView"
            android:textColor="@color/colorPrimaryDark"/>
    <Button
            android:text="@string/welcome_page_fragment_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableRight="@drawable/ic_next_arrow"
            android:textColor="@color/colorWhite"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/setupAccountNextTextView" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/setupAccountGetStartedTextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>